# email-master

./: .eslintrc-auto-import.json  auto-imports.d.ts  package-lock.json  package.json
src/: aes.ts  api.ts  host-config.ts  i18n.ts  log.ts  main.ts  socketApi.ts  store.ts
src-tauri/: Cargo.toml  mahalli.sqlite  tauri.conf.json
src-tauri/src/: api.rs  consoleLog.rs  main.rs  websocket.rs
src-tauri/src/commands/: user.rs
src/components/: ClientCreate.vue  Navigation.vue  SideBar.vue  TranslationModal.vue
src/components/ui/select/: SelectItem.vue
src/locales/: en-US.json  zh-CN.json
src/pages/: index.vue
src/pages/index/: EmailList.vue  MailList.vue  TerminalStatus.vue  dashboard.vue  home.vue  index.vue  login.vue
src/pages/index/clients/: index.vue
src/pages/index/invoices/: index.vue
src/router/: index.ts
src/utils/: config.ts
